# rust-api

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  clippy.toml
src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs
tests/: integration_test.rs
